@@ -1,3 +1,6 @@
+* Mon Sep 10 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.0-0
+- Update Hiera 4 to Hiera 5
+
 * Mon Jul 09 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.0-0
 - Adds a `selinux_login` custom type that provides for the management of login
   to user role mappings.
